fix layout bug in upgrades article

--- a/src/components/upgrades/upgrades.component.scss
+++ b/src/components/upgrades/upgrades.component.scss
@@ -54,10 +54,12 @@ tr {
 .tablebox {
   display: flex;
   flex-direction: column;
+  line-height: 30px;
 
   .info_container {
     padding: 0;
     margin-top: 16px;
+
     .info {
       color: #bbbedb;
     }
